2005-03-11  Dalibor Topic  <robilad@kaffe.org>

	* gnu/testlet/java/io/FileInputStream/fileinputstream.java:
	Fixed typo.

2005-03-11  Robert Schuster <thebohemian@gmx.net>

    * gnu/testlet/java/beans/EventHandler/check14c.java: New
    tests.

2005-03-10  Robert Schuster <thebohemian@gmx.net>

    * gnu/testlet/java/beans/EventHandler/check14.java: Added
    more subtests and documentation.
    * gnu/testlet/java/beans/EventHandler/check14b.java: New
    tests.
    * gnu/testlet/java/beans/EventHandler/check14c.java: New
    tests, was check14.java.

2005-03-10  Robert Schuster <thebohemian@gmx.net>

    * gnu/testlet/java/beans/EventHandler/check.java: Removed
    file, will be added as check14c.java again.

2005-03-10  Dalibor Topic  <robilad@kaffe.org>

	* gnu/testlet/java/io/RandomAccessFile/randomaccessfile.java: 
	New test.
	
2005-03-10  Dalibor Topic  <robilad@kaffe.org>

	* gnu/testlet/java/io/FileOutputStream/fileoutputstream.java: 
	New test.
	
2005-03-10  Dalibor Topic  <robilad@kaffe.org>

	* gnu/testlet/java/io/FileInputStream/fileinputstream.java: 
	New test.

2005-03-09  Robert Schuster <thebohemian@gmx.net>

	* gnu/testlet/java/lang/reflect/Proxy/check13.java: New
	test.
	
2005-03-09  Robert Schuster <thebohemian@gmx.net>

	* gnu/testlet/java/beans/EventHandler/check.java: Added new
	tests and try-catch-blocks for known problems.
	* gnu/testlet/java/beans/EventHandler/check14.java: Added
	new tests.
	
2005-03-08  David Daney  <ddaney@avtrex.com>

	* gnu/testlet/java/io/BufferedInputStream/MarkReset.java (marktest):
	Two testcases added for PR libgcj/20389.

2005-03-08  Robert Schuster <thebohemian@gmx.net>

	* gnu/testlet/java/beans/EventHandler/check.java: New test.
	* gnu/testlet/java/beans/EventHandler/check14.java: Added
	new test.

2005-03-07  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/Font/serialization.java: New test.
	
2005-03-07  David Gilbert  <david.gilbert@object-refinery.com>
